--- a/infra/deployment/staging/docker-compose.yml
+++ b/infra/deployment/staging/docker-compose.yml
@@ -19,6 +19,8 @@ services:
         depends_on:
             - db
     db:
+        build:
+            context: '../../..'
         image: 'mysql:8.0'
         environment:
             MYSQL_ROOT_PASSWORD: '${DB_PASSWORD}'
