--- a/infra/deployment/staging/Dockerfile
+++ b/infra/deployment/staging/Dockerfile
@@ -61,9 +61,9 @@ RUN userdel -r ubuntu
 RUN groupadd --force -g $WWWGROUP sail
 RUN useradd -ms /bin/bash --no-user-group -g $WWWGROUP -u 1337 sail
 
-COPY start-container /usr/local/bin/start-container
-COPY supervisord.conf /etc/supervisor/conf.d/supervisord.conf
-COPY php.ini /etc/php/8.4/cli/conf.d/99-sail.ini
+COPY ./infra/deployment/staging/start-container /usr/local/bin/start-container
+COPY ./infra/deployment/staging/supervisord.conf /etc/supervisor/conf.d/supervisord.conf
+COPY ./infra/deployment/staging/php.ini /etc/php/8.4/cli/conf.d/99-sail.ini
 RUN chmod +x /usr/local/bin/start-container
 
 EXPOSE 80/tcp
