--- a/infra/deployment/staging/docker-compose.yml
+++ b/infra/deployment/staging/docker-compose.yml
@@ -21,7 +21,7 @@ services:
     db:
         image: 'mysql:8.0'
         environment:
-            MYSQL_ROOT_PASSWORD: '${DB_PASSWORD}'
+            MYSQL_ROOT_PASSWORD: '${DB_ROOT_PASSWORD}'
             MYSQL_ROOT_HOST: '%'
             MYSQL_DATABASE: '${DB_DATABASE}'
             MYSQL_USER: '${DB_USERNAME}'
@@ -30,7 +30,6 @@ services:
             MYSQL_EXTRA_OPTIONS: '${MYSQL_EXTRA_OPTIONS}'
         volumes:
             - 'sail-mysql:/var/lib/mysql'
-            - '/tmp/mysql:/var/run/mysqld'
         networks:
             sail:
                 ipv4_address: 172.18.13.3
