--- a/infra/deployment/staging/docker-compose.yml
+++ b/infra/deployment/staging/docker-compose.yml
@@ -6,7 +6,7 @@ services:
             args:
                 WWWGROUP: '${WWWGROUP}'
         image: 'sail-8.4/app'
-
+        restart: always
         environment:
             WWWUSER: '${WWWUSER}'
             LARAVEL_SAIL: 1
@@ -20,6 +20,7 @@ services:
             - db
     db:
         image: 'mysql:8.0'
+        restart: always
         environment:
             MYSQL_ROOT_PASSWORD: '${DB_ROOT_PASSWORD}'
             MYSQL_ROOT_HOST: '%'
